--- a/web-app/src/main/resources/templates/login.html
+++ b/web-app/src/main/resources/templates/login.html
@@ -63,7 +63,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registration}">Register
+						<span>New user? <a href="/" th:href="@{/registeration}">Register
 								here</a></span>
 					</div>
 				</form>
