--- a/web-app/src/main/resources/templates/login.html
+++ b/web-app/src/main/resources/templates/login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,34 +10,15 @@
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
 
-<title>Login page</title>
+<title>Login Page</title>
 </head>
 <body>
-
-<!-- 	<nav class="navbar navbar-inverse navbar-fixed-top"> -->
-<!-- 		<div class="container"> -->
-<!-- 			<div class="navbar-header"> -->
-<!-- 				<button type="button" class="navbar-toggle collapsed" -->
-<!-- 					data-toggle="collapse" data-target="#navbar" aria-expanded="false" -->
-<!-- 					aria-controls="navbar"> -->
-<!-- 					<span class="sr-only">Toggle navigation</span> <span -->
-<!-- 						class="icon-bar"></span> <span class="icon-bar"></span> <span -->
-<!-- 						class="icon-bar"></span> -->
-<!-- 				</button> -->
-<!-- 				<a class="navbar-brand" href="#" th:href="@{/}">Registration and -->
-<!-- 					Login Module</a> -->
-<!-- 			</div> -->
-<!-- 		</div> -->
-<!-- 	</nav> -->
-
-<!-- 	<br> -->
-<!-- 	<br> -->
 
 	<div class="container">
 
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<h1>Login page</h1>
+				<h1>Login Page</h1>
 				<form th:action="@{/login}" method="post">
 					<div th:if="${param.error}">
 						<div class="alert alert-danger">Invalid username or
