--- a/web-app/src/main/resources/templates/login.html
+++ b/web-app/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -12,12 +13,13 @@
 
 <title>Login Page</title>
 </head>
-<body>
+<body style="background-color: #df80ff
+;">
 
-	<div class="container">
+	<div class="container" style="background-color:" "dark"; >
 
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-4 col-md-offset-12">
 				<h1>Login Page</h1>
 				<form th:action="@{/login}" method="post">
 					<div th:if="${param.error}">
@@ -46,8 +48,10 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registeration}">Register
-								here</a></span>
+					<span class="badge badge-info">New user? </span><a href="/" th:href="@{/registeration}">  Register
+								here</a>
+								
+						
 					</div>
 				</form>
 			</div>
